# Alphs

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: run_paper.sh
scripts/systemd/: alpaca_hft_paper.service  alpaca_hft_paper_start.service  alpaca_hft_paper_start.timer  alpaca_hft_paper_stop.service  alpaca_hft_paper_stop.timer
src/: broker.py  config.py  data_stream.py  execution.py  main.py  metrics.py  risk.py  trade_stream.py
src/strategies/: avellaneda_stoikov_mm.py  base.py  etf_basket_arb.py  lead_lag_arb.py  ml_orderflow.py  news_event_driven.py  pairs_stat_arb.py
src/utils/: alerts.py  math.py  rate_limit.py  rolling.py  scheduler.py  time.py
